fixed button spacing

--- a/src/app/usershop/product-slider/product-slider.component.css
+++ b/src/app/usershop/product-slider/product-slider.component.css
@@ -190,7 +190,7 @@ h5 {
     left: 10px;
     z-index: 10;
     background: #000;
-    color: #fff;
+    color: #e2ff91;
     padding: 5px 8px; /* Adjust padding as needed */
     border-radius: 5px;
     font-size: 10px; /* Adjust font size as needed */
