--- a/src/app/usershop/shopping-cart/shopping-cart.component.css
+++ b/src/app/usershop/shopping-cart/shopping-cart.component.css
@@ -26,8 +26,9 @@
 
 .basket-table td,.mobile-cart-item {
   display: flex;
-  /* justify-content: space-between */
+  justify-content: space-between;
   gap: 12%;
+
 }
 
 .basket-table tr,.mobile-cart-item {
@@ -77,12 +78,13 @@
   padding: 1.5rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  width: 100%;
-  float: right;
+  width: 50%;
+  /* float: right; */
   position: sticky;
   top: 1rem;
   max-height: calc(100vh - 2rem);
-  overflow-y: auto
+  overflow-y: auto;
+  margin: 0 0 10px 28%;
 }
 
 .summary-title {
@@ -188,7 +190,8 @@
   }
 
   .summary {
-      float: none
+      float: none;
+      margin: 0 0 10px 0 !important;
   }
 
   .side-aside {
